--- a/chattrbox/.eslintrc.json
+++ b/chattrbox/.eslintrc.json
@@ -1,8 +1,12 @@
 {
     "env": {
-        "browser": true
+        "browser": true,
+        "es6": true
     },
     "extends": "eslint:recommended",
+    "parserOptions": {
+        "sourceType": "module"
+    },
     "rules": {
         "indent": [
             "error",
@@ -19,6 +23,7 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "no-console":0
     }
 }
