--- a/chattrbox/.eslintrc.json
+++ b/chattrbox/.eslintrc.json
@@ -8,6 +8,9 @@
         "sourceType": "module"
     },
     "rules": {
+        "no-unused-vars": 0,
+        "no-console": 0,
+        "no-undef": 0,
         "indent": [
             "error",
             4
@@ -24,6 +27,6 @@
             "error",
             "always"
         ],
-        "no-console":0
+        "no-console": 0
     }
 }
